# sae_error_probing_ami

./: .gitignore  Makefile  README.md  environment.yml  pyproject.toml
data/processed/logistic_combined_gemma_2_2b_layer_19_width_16k_canonical/: probe_results_twt_happy.csv
data/processed/logistic_combined_gemma_2_2b_layer_19_width_16k_canonical_k100/: probe_results_man_borough.csv  probe_results_twt_happy.csv
data/raw/: all_cities.csv  df_sample.csv
notebooks/: probing_ds.R
results/gemma_2_2b_layer_19_width_16k_canonical/: probe_results_truth.csv
results/logistic_combined_gemma_2_2b_layer_19_width_16k_canonical/: probe_results_twt_happy.csv  probe_similarities_twt_happy.csv
results/logistic_gemma_2_2b_layer_19_width_16k_canonical/: probe_results_ath_basketball.csv  probe_results_headline_fp.csv  probe_results_man_borough.csv  probe_results_truth.csv  probe_results_twt_happy.csv
results/logistic_meta_llama_Llama_3.1_8B_l19r_8x/: probe_results_ath_basketball.csv  probe_results_headline_fp.csv  probe_results_man_borough.csv  probe_results_truth.csv  probe_results_twt_happy.csv
results/meta_llama/Llama_3.1_8B_l19r_8x/: probe_results_truth.csv
results/meta_llama_Llama_3.1_8B_l19r_8x/: probe_results_ath_basketball.csv  probe_results_headline_fp.csv  probe_results_man_borough.csv  probe_results_truth.csv  probe_results_twt_happy.csv
sae_error_probing_ami/: __init__.py  logistic_regression_probe.py  probe_training_claude_edited.py  probe_training_steering_old.py  random_file.py  temp_logistic.py  train_probe.py  utils.py
(+11 files in other folders)
