[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "sae_error_probing_ami"
version = "0.0.1"
description = "Experiments with probing and steering on the SAE error term"
authors = [
  { name = "Tim Hua" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.10"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known-first-party = ["sae_error_probing_ami"]
force-sort-within-sections = true

[tool.ruff.lint]
ignore = ["F722","F821"]
